# paper-glancer

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
paper_glancer/: main.py  paper.py
paper_glancer/impl/: neurips.py  open_review.py
