[tool.poetry]
name = "paper-glancer"
version = "0.1.0"
description = "A set of tools to fetch information about the paper list from the conferences so that the user can glance over them."
authors = ["Break Yang <breakds@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
requests = "^2.28.1"
loguru = "^0.6.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
